fixed scrollbar

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,6 +8,10 @@ html, body {
   height: 100%;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 a, button, .btn, .list-group-item:hover {
   cursor: default;
 }
@@ -20,8 +24,6 @@ a, button, .btn, .list-group-item:hover {
 .form-control {
   font-size: .85rem;
 }
-
-
 
 /**
 *
